tests/compile_fail/message_trait/gui/ready_ok.rs
fn a(_: impl ruci::gui::traits::Message) {}
fn b(m: ruci::ReadyOk) {
    a(m);
}

fn main() {}